# observatorio-publico

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  GETTING_STARTED.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  etl_full.sh  etl_weekly.sh  pyproject.toml  scheduler.py
backend/alembic/: env.py
backend/alembic/versions/: 19ff4b3d5779_add_card_expenses.py  32197fed136b_initial_schema.py  686d5c77d7d0_add_mandate_end_to_politicians.py  8f770b8b32cc_add_votes_unique_constraint.py  9eeb7ce74443_add_role_source_to_politicians.py  a9a9febe9fca_add_amendments.py  ad9e38d101f9_add_description_to_votes.py  add890c6769f_add_propositions_and_votes.py  b4e7c1d09f23_add_municipality_bigint_external_id.py  c1fed9a41cb9_restore_votes_unique_constraint.py  fac9b956ab2d_add_proposition_ref_to_votes.py
backend/app/: cache.py  config.py  database.py  exceptions.py  main.py
backend/app/etl/: camara_client.py  jobs.py  runner.py  senado_client.py  transparencia_client.py
backend/app/models/: __init__.py  amendment.py  card_expense.py  expense.py  party.py  politician.py  proposition.py  vote.py
backend/app/repositories/: amendment_repository.py  card_expense_repository.py  expense_repository.py  party_repository.py  politician_repository.py  proposition_repository.py  vote_repository.py
backend/app/schemas/: amendment.py  card_expense.py  compare.py  expense.py  news.py  party.py  politician.py  proposition.py  senator.py  stats.py  vote.py
backend/app/services/: amendment_service.py  card_expense_service.py  (+8 more)
(+72 files in other folders)
